--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "picker",
     "simple"
   ],
-  "repository": "git@github.com:brumm/atom-highlight-colors.git",
+  "repository": "brumm/atom-highlight-colors.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
